# prossimo

./: .gitignore  Cargo.toml  README.md  config.yaml
lists/: liveproxies.lst  proxies.lst
src/: config.rs  error.rs  logging.rs  main.rs
src/proxy/: manager.rs  mod.rs  types.rs  validator.rs
src/server/: listener.rs
