[package]
name = "prossimo"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.49.0", features = ["full"] }
hyper = { version = "0.14.32", features = ["full", "http1", "server", "tcp"] }
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["full"] }
reqwest = { version = "0.13.1", features = ["socks"] }
tokio-socks = "0.5.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_yaml = "0.9"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
anyhow = "1.0.100"
async-trait = "0.1.89"
trust-dns-resolver = "0.23.2"
thiserror = "2.0.17"
url = "2.5.7"
env_filter = "0.1.4"
tokio-rustls = "0.26.4"
clap = { version = "4.5.54", features = [
    "derive",
    "color",
    "help",
    "usage",
    "error-context",
    "suggestions",
] }
colored = "3.0.0"
nix = "0.30.1"
ctrlc = "3.5.1"
sys = "0.0.1"
